[추가] Stream: 예제 추가